--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "object-assign": "4.1.1",
     "react": "15.6.1",
     "react-chartist": "^0.13.0",
+    "react-d3": "^0.4.0",
     "react-dom": "15.6.1",
     "react-redux": "5.0.6",
     "react-router": "4.2.0",
