--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,7 @@ node_js:
   - "5"
   - "4"
 script: yarn run test:CI
+script: yarn run test
 after_success:
   # Send coverage data to coveralls.
   - yarn run test:cover:CI
